--- a/welcome.html
+++ b/welcome.html
@@ -3,51 +3,74 @@
     <head>
         <meta charset="UTF-8">
         <title>Welcome HTML</title>
+
   </head>
   <body>
-      <div>Hello World!</div>
-      <p>Lorem ipsum dolor sit amet, <span> consectetur </span> adipisicing elit. Alias at et excepturi, harum hic ipsam iusto maiores
-        nam nemo odio quasi repellendus tenetur ullam? Ad aliquid impedit ipsam quas repellendus.</p>
+  <header><h2>Welcome to Veridian Dynamics!</h2></header>
+  <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+<hr>
+  <div>
+      <h2>Core Values</h2>
+      <ul>
+          <li>Competence</li>
+          <li>Involvment</li>
+          <li>Technology</li>
+      </ul>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad aut consequuntur, deserunt dolor eaque
-          hic ipsam, modi numquam officiis omnis saepe temporibus velit? Atque dicta excepturi laudantium magnam
-          veritatis?</p>
-      <div id="myDiv" class="myDiv">
+      <h2>Our Process</h2>
+      <ol>
+          <li>Plan</li>
+          <li>Evaluate</li>
+          <li>Implement</li>
+      </ol>
 
+      <h2>2020 Vision</h2>
+      <ul>
+          <li>Become #1 in Technology</li>
+          <li>Increase Success by 20%</li>
+          <li>Increase business by 30%</li>
+      </ul>
+  </div>
+<hr>
+
+      <h2>Company Vision</h2>
+      <div>
+      <div>
+          <img src="./images/image%201.jpeg" width="300px"> <img src="./images/image%202.webp" width="300px">
+      </div>
+      <div>
+          <img src="./images/image%203.jpeg" width="300px">  <img src="./images/image%204.webp" width="300px">
+      </div>
+      </div>
+      <div>
+          <h2>Our Product</h2>
+          <table>
+              <tr>
+                  <th>Plan</th>
+                  <th>Price</th>
+                  <th>Features</th>
+              </tr>
+              <tr>
+                  <td>Stater</td>
+                  <td>$99</td>
+                  <td>Base Technology</td>
+              </tr>
+              <tr>
+                  <td>Advanced</td>
+                  <td>$199</td>
+                  <td>Additional Features</td>
+              </tr>
+              <tr>
+                  <td>Premium</td>
+                  <td>$499</td>
+                  <td>Unlimited Support</td>
+              </tr>
+          </table>
+      </div>
+      <div>
+      <em>All products come with our quality gaurantee&#8482;</em>
       </div>
 
-  <h1 id="myDiv" class="myDiv">
-  </h1>
-  <input id="name" type="text" />
-
-  <ul>
-      <li>
-          <a href="https://google.com" target="_blank">List Item 1</a>
-
-      </li>
-      <li>List Item 2</li>
-      <li>List Item 3</li>
-  </ul>
-  <ol>
-      <li>List Item 1</li>
-      <li>List Item 2</li>
-      <li>List Item 3</li>
-  </ol>
-      <img src="https://assets-prd.ignimgs.com/2022/02/07/gundampc-1644272376614.jpg" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Today Only: Score a Rare Gundam Themed RTX 3080 STRIX Gaming PC at Newegg -  IGN" data-noaft="1" style="width: 417px; height: 234.563px; margin: 27.4687px 0px;">
-
-      <table>
-          <tr>
-              <th>Product</th>
-              <th>Price</th>
-          </tr>
-          <tr>
-              <td>Iced Tea</td>
-              <td>$2.99</td>
-          </tr>
-          <tr>
-              <td>Hamburger and French Fries</td>
-              <td>$11.99</td>
-          </tr>
-      </table>
+      <a href="#top">Go to the top of the page</a>
   </body>
   </html>
