feat: added github webpage

--- a/welcome.html
+++ b/welcome.html
@@ -36,10 +36,10 @@
       <h2>Company Vision</h2>
       <div>
       <div>
-          <img src="./images/image%201.jpeg" width="300px"> <img src="./images/image%202.webp" width="300px">
+          <img src="img/image%201.jpeg" width="300px"> <img src="img/image%202.webp" width="300px">
       </div>
       <div>
-          <img src="./images/image%203.jpeg" width="300px">  <img src="./images/image%204.webp" width="300px">
+          <img src="img/image%203.jpeg" width="300px">  <img src="img/image%204.webp" width="300px">
       </div>
       </div>
       <div>
