--- a/welcome.html
+++ b/welcome.html
@@ -7,9 +7,12 @@
   </head>
   <body>
   <header><h2>Welcome to Veridian Dynamics!</h2></header>
+  <nav>
   <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+  </nav>
 <hr>
-  <div>
+  <section>
+      <div>
       <h2>Core Values</h2>
       <ul>
           <li>Competence</li>
@@ -31,18 +34,15 @@
           <li>Increase business by 30%</li>
       </ul>
   </div>
+  </section>
 <hr>
+  <section>
+  <h2>Company Vision</h2>
+        <div>
+          <img src="img/image%201.jpeg" width="300px" height="200px"> <img src="img/image%202.webp" width="300px" height="200px">
 
-      <h2>Company Vision</h2>
-      <div>
-      <div>
-          <img src="img/image%201.jpeg" width="300px"> <img src="img/image%202.webp" width="300px">
-      </div>
-      <div>
-          <img src="img/image%203.jpeg" width="300px">  <img src="img/image%204.webp" width="300px">
-      </div>
-      </div>
-      <div>
+          <img src="img/image%203.jpeg" width="300px" height="200px"> <img src="img/image%204.webp" width="300px" height="200px">
+        </div>
           <h2>Our Product</h2>
           <table>
               <tr>
@@ -66,11 +66,13 @@
                   <td>Unlimited Support</td>
               </tr>
           </table>
-      </div>
-      <div>
+    </section>
+      <footer>
+          <div>
       <em>All products come with our quality gaurantee&#8482;</em>
       </div>
 
       <a href="#top">Go to the top of the page</a>
+      </footer>
   </body>
   </html>
