--- a/github.html
+++ b/github.html
@@ -4,60 +4,82 @@
     <meta charset="UTF-8">
     <title>github</title>
 </head>
-<di>
-  <img src="./img/30x30.svg">
-  <ul>
-    <li><a href="">Pull Request</a></li>
-    <li><a href="">Issues</a></li>
-    <li><a href="">Marketplace</a></li>
-    <li><a href="">Explore</a></li>
-  </ul>
-</di>
-<br>
-<div>
-  <img src="./img/48x48.svg">
-  <header><h3>Codeup</h3></header>
-  <table>
-    <tr>
-      <th>Repositories</th>
-      <th>People</th>
-      <th>Teams</th>
-      <th>Projects</th>
-      <th>Setting</th>
-    </tr>
-  </table>
-</div>
-<br>
-<div>
-  <header>Codeup's dev team</header>
-  <div>
-    <img src="https://fer-uig.glitch.me?uuid=1" class="user-icon" alt="user-icon" />
-    <a href="">link to profile</a>
-    <br>Random Person Name
-    <br>Member
-    <br>X team members
-  </div>
-  <div>
-    <img src="https://fer-uig.glitch.me?uuid=777" class="user-icon" alt="user-icon" />
-    <a href="">link to profile</a>
-    <br>Random Person Name
-    <br>Member
-    <br>X team members
-  </div>
-  <div>
-    <img src="https://fer-uig.glitch.me?uuid=999" class="user-icon" alt="user-icon" />
-    <a href="">link to profile</a>
-    <br>Random Person Name
-    <br>Member
-    <br>X team members
-  </div>
-  <div>
-    &copy;2018 Github. Inc.
-    <br><a href="">Terms</a> <a href="">Privacy</a> <a href="">Security</a> <a href="">Status</a> <a href="">Help</a>
-    <br> <a href="">Contact</a> <a href="">API</a> <a href="">Training</a>
-  </div>
-</div>
-<body>
 
+<body>
+<div class="page-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <img src="./img/30x30.svg">
+      </div>
+      <div class="column">
+        <ul>
+          <li><a href="">Pull Request</a></li>
+          <li><a href="">Issues</a></li>
+          <li><a href="">Marketplace</a></li>
+          <li><a href="">Explore</a></li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </div>
+<div class="container">
+  <div class="row">
+    <div class="column">
+        <img src="./img/48x48.svg">
+        <header><h3>Codeup</h3></header>
+        <table>
+          <tr>
+            <th>Repositories</th>
+            <th>People</th>
+            <th>Teams</th>
+            <th>Projects</th>
+            <th>Setting</th>
+          </tr>
+    </table>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="column">
+    <h4>Codeup's dev team</h4>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <img src="https://fer-uig.glitch.me?uuid=1" class="user-icon" alt="user-icon" />
+      <a href="">link to profile</a>
+      <br>Random Person Name
+      <br>Member
+      <br>X team members
+    </div>
+    <div class="column">
+      <img src="https://fer-uig.glitch.me?uuid=777" class="user-icon" alt="user-icon" />
+      <a href="">link to profile</a>
+      <br>Random Person Name
+      <br>Member
+      <br>X team members
+    </div>
+    <div class="column">
+      <img src="https://fer-uig.glitch.me?uuid=999" class="user-icon" alt="user-icon" />
+      <a href="">link to profile</a>
+      <br>Random Person Name
+      <br>Member
+      <br>X team members
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="column">
+      &copy;2018 Github. Inc.
+      <br><a href="">Terms</a> <a href="">Privacy</a> <a href="">Security</a> <a href="">Status</a> <a href="">Help</a>
+      <br> <a href="">Contact</a> <a href="">API</a> <a href="">Training</a>
+    </div>
+  </div>
+</div>
 </body>
 </html>
