--- a/github.html
+++ b/github.html
@@ -33,7 +33,7 @@
             <th>Repositories</th>
             <th>People</th>
             <th>Teams</th>
-            <th>Projects</th>
+            <th>Projects</th>g
             <th>Setting</th>
           </tr>
     </table>
