--- a/welcome.html
+++ b/welcome.html
@@ -1,120 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome HTML</title>
+<meta charset="UTF-8">
+<title>Welcome HTML</title>
 
 </head>
-    <body>
-        <div class="page-wrapper">
-        <div class="container">
+<body>
+<div class="page-wrapper">
+    <div class="container">
         <div class="row">
-        <div class="column">
-        <h2>Welcome to Veridian Dynamics!</h2>
+            <div class="column">
+                <h1>Welcome to Veridian Dynamics!</h1>
+            </div>
+            <div class="column">
+                <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+            </div>
         </div>
-        <div class="column">
-        <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
-        </div>
-        </div>
-        </div>
-        <hr>
-        <div class="container">
+    </div>
+    <hr/>
+    <div class="container">
         <div class="row">
-        <div class="column">
-        <h2>Core Values</h2>
+            <div class="column">
+                <h2>Core Values</h2>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Competence</li>
+                    <li>Involvment</li>
+                    <li>Technology</li>
+                </ul>
+            </div>
         </div>
-        <div class="column">
-        <ul>
-        <li>Competence</li>
-        <li>Involvment</li>
-        <li>Technology</li>
-        </ul>
-        </div>
-        </div>
-        </div>
-        <div class="container">
+    </div>
+    <div class="container">
         <div class="row">
-        <div class="column">
-        <h2>Our Process</h2>
+            <div class="column">
+                <h2>Our Process</h2>
+            </div>
+            <div class="column">
+                <ol>
+                    <li>Plan</li>
+                    <li>Evaluate</li>
+                    <li>Implement</li>
+                </ol>
+            </div>
         </div>
-        <div class="column">
-        <ol>
-        <li>Plan</li>
-        <li>Evaluate</li>
-        <li>Implement</li>
-        </ol>
-        </div>
-        </div>
-        </div>
-        <div class="container">
+    </div>
+    <div class="container">
         <div class="row">
-        <div class="column">
-        <h2>2020 Vision</h2>
+            <div class="column">
+                <h2>2020 Vision</h2>
+            </div>
+            <div class="column">
+                <ul>
+                    <li>Become #1 in Technology</li>
+                    <li>Increase Success by 20%</li>
+                    <li>Increase business by 30%</li>
+                </ul>
+            </div>
         </div>
-        <div class="column">
-        <ul>
-        <li>Become #1 in Technology</li>
-        <li>Increase Success by 20%</li>
-        <li>Increase business by 30%</li>
-        </ul>
-        </div>
-        </div>
-        </div>
-        </section>
-        <hr>
-        <div class="container">
+    </div>
+    <hr/>
+    <div class="container">
         <div class="row">
-        <div class="column">
-        <h2>Company Vision</h2>
+            <div class="column">
+                <h2>Company Vision</h2>
+            </div>
+            <div class="column">
+                <img src="img/image%201.jpeg" width="300px" height="200px"/>
+                <img src="img/image%202.webp" width="300px" height="200px"/>
+                <br/>
+                <img src="img/image%203.jpeg" width="300px" height="200px"/>
+                <img src="img/image%204.webp" width="300px" height="200px"/>
+            </div>
         </div>
-        <div class="column">
-        <img src="img/image%201.jpeg" width="300px" height="200px"> <img src="img/image%202.webp" width="300px" height="200px">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <h2>Our Product</h2>
+            </div>
+            <div class="column">
+                <table>
+                    <tr>
+                        <th>Plan</th>
+                        <th>Price</th>
+                        <th>Features</th>
+                    </tr>
+                    <tr>
+                        <td>Stater</td>
+                        <td>$99</td>
+                        <td>Base Technology</td>
+                    </tr>
+                    <tr>
+                        <td>Advanced</td>
+                        <td>$199</td>
+                        <td>Additional Features</td>
+                    </tr>
+                    <tr>
+                        <td>Premium</td>
+                        <td>$499</td>
+                        <td>Unlimited Support</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <p></p><em>All products come with our quality gaurantee&#8482;</em>.</p>
+            </div>
+        </div>
+    </div>
 
-        <img src="img/image%203.jpeg" width="300px" height="200px"> <img src="img/image%204.webp" width="300px" height="200px">
-        </div>
-        </div>
-        </div>
-        <div class="container">
-        <div class="row">
-        <div class="column">
-        <h2>Our Product</h2>
-        </div>
-        <div class="column">
-        <table>
-        <tr>
-          <th>Plan</th>
-          <th>Price</th>
-          <th>Features</th>
-        </tr>
-        <tr>
-          <td>Stater</td>
-          <td>$99</td>
-          <td>Base Technology</td>
-        </tr>
-        <tr>
-          <td>Advanced</td>
-          <td>$199</td>
-          <td>Additional Features</td>
-        </tr>
-        <tr>
-          <td>Premium</td>
-          <td>$499</td>
-          <td>Unlimited Support</td>
-        </tr>
-        </table>
-        </div>
-        </div>
-        </div>
-        <div class="container">
-        <div class="row">
-        <div class="column">
-        <em>All products come with our quality gaurantee&#8482;</em>
-        </div>
-        </div>
-        </div>
+    <a href="#top"><strong>Go to the top of the page.</strong></a>
 
-        <a href="#top">Go to the top of the page</a>
-
-        </div>
-    </body>
+</div>
+</body>
 </html>
