--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Welcome HTML</title>
+<link rel="stylesheet" href="./css/style.css"/>
 
 </head>
 <body>
+<h1 class="fancy-header">I've got style!</h1>
+
 <div class="page-wrapper">
     <div class="container">
         <div class="row">
