--- a/welcome.html
+++ b/welcome.html
@@ -7,13 +7,12 @@
 
 </head>
 <body>
-<h1 class="fancy-header">I've got style!</h1>
 
 <div class="page-wrapper">
     <div class="container">
         <div class="row">
-            <div class="column">
-                <h1>Welcome to Veridian Dynamics!</h1>
+            <div class="column-main-header">
+                <div class="header"><h1>Welcome to Veridian Dynamics!</h1></div>
             </div>
             <div class="column">
                 <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
@@ -24,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h2>Core Values</h2>
+                <div class="header"><h2>Core Values</h2></div>
             </div>
             <div class="column">
                 <ul>
@@ -38,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h2>Our Process</h2>
+                <div class="header"><h2>Our Process</h2></div>
             </div>
             <div class="column">
                 <ol>
@@ -52,7 +51,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h2>2020 Vision</h2>
+                <div class="header"><h2>2020 Vision</h2></div>
             </div>
             <div class="column">
                 <ul>
@@ -67,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h2>Company Vision</h2>
+                <div class="header"><h2>Company Vision</h2></div>
             </div>
             <div class="column">
                 <img src="img/image%201.jpeg" width="300px" height="200px"/>
@@ -81,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h2>Our Product</h2>
+                <div class="header"><h2>Our Product</h2></div>
             </div>
             <div class="column">
                 <table>
@@ -114,10 +113,12 @@
             <div class="column">
                 <p></p><em>All products come with our quality gaurantee&#8482;</em>.</p>
             </div>
+
         </div>
+        <a href="#top"><strong>Go to the top of the page.</strong></a>
     </div>
 
-    <a href="#top"><strong>Go to the top of the page.</strong></a>
+
 
 </div>
 </body>
