--- a/order-pizza.html
+++ b/order-pizza.html
@@ -98,7 +98,6 @@
 
     </div>
 
-
     <div class="tab-pane fade" id="cheeseAndSauce" role="tabpanel" aria-labelledby="cheeseAndSauce-tab">
 
       <div class="card">
@@ -107,7 +106,7 @@
           <li class="list-group-item">
 
             <ul class="list-group">
-              <li class="list-group-item bg-light">Cheese/li>
+              <li class="list-group-item bg-light">Cheese</li>
               <li class="list-group-item">How Much?</li>
               <li class="list-group-item">
 
@@ -147,11 +146,114 @@
         </ul>
       </div>
     </div>
-    <div class="tab-pane fade" id="topping" role="tabpanel" aria-labelledby="topping-tab">...</div>
+
+    <div class="tab-pane fade" id="topping" role="tabpanel" aria-labelledby="topping-tab">
+
+      <div class="card">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item bg-primary text-white">Choose Toppings</li>
+          <li class="list-group-item">
+
+            <ul class="list-group">
+              <li class="list-group-item bg-light">Choose Meats</li>
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="beef">
+                  <label class="form-check-label" for="beef">
+                    Beef
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="ham">
+                  <label class="form-check-label" for="ham">
+                    Ham
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="phillySteak">
+                  <label class="form-check-label" for="phillySteak">
+                    Philly Steak
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="bacon">
+                  <label class="form-check-label" for="bacon">
+                    Bacon
+                  </label></div>
+
+              </li>
+
+              <br>
+
+              <li class="list-group-item bg-light">Choose Non-Meats</li>
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="greenPeppers">
+                  <label class="form-check-label" for="greenPeppers">
+                    Green Peppers
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="mushrooms">
+                  <label class="form-check-label" for="mushrooms">
+                    Mushrooms
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="onions">
+                  <label class="form-check-label" for="onions">
+                    Onions
+                  </label></div>
+
+              </li>
+
+              <li class="list-group-item">
+
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="jalapenoPeppers">
+                  <label class="form-check-label" for="jalapenoPeppers">
+                    Jalapeño Peppers
+                  </label></div>
+
+              </li>
+            </ul>
+          <li class="list-group-item bg-light d-flex justify-content-end">
+
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-primary">Checkout <img src="./img/cart-fill.svg" alt="" width="15" height="15" class="d-inline-block align-text-top">
+                </a></button>
+            </div>
+
+          </li>
+        </ul>
+      </div>
+
+    </div>
   </div>
-
-
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- Your custom JS goes here -->
 </body>
