--- a/order-pizza.html
+++ b/order-pizza.html
@@ -242,7 +242,7 @@
           <li class="list-group-item bg-light d-flex justify-content-end">
 
             <div class="btn-group" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-primary">Checkout <img src="./img/cart-fill.svg" alt="" width="15" height="15" class="d-inline-block align-text-top">
+              <button type="button" class="btn btn-primary">Checkout <img src="./img/cart-fill.svg" alt="" width="15" height="15" class="">
                 </a></button>
             </div>
 
