--- a/order-pizza.html
+++ b/order-pizza.html
@@ -37,9 +37,13 @@
 </nav>
 <!-- Main page content -->
 <div class="container container-fluid">
+
+  <div class="d-none d-sm-block">
   <div class="jumbotron d-flex">
     <div class="align-self-center flex-grow-1 fs-2 bg-light p-2 text-black bg-opacity-50 d-none d-sm-block"><p class="text-center">Welcome to Pizza World!</p></div>
   </div>
+  </div>
+
   <h2>Build your own pizza!</h2>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
