--- a/bootstrap-resume.html
+++ b/bootstrap-resume.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<header class="container">
+<header class="container container-fluid">
   <h1 class="text-center display-3 my-3 py-3">CODY THE DUCK</h1>
 </header>
 <!-- Main page content -->
-<div class="container">
+<div class="container container-fluid">
 
   <div class="row">
 
@@ -65,8 +65,8 @@
   </div>
 
   <div class="row">
-      <div class="col-lg-4">
-        <div class="row">
+    <div class="col-lg-4">
+      <div class="row">
         <div class="col-lg-12">
           <h4 class="text-primary">SKILL AND ABILITIES</h4>
           <ul>
@@ -77,34 +77,34 @@
           </ul>
         </div>
 
-          <div class="col-lg-12">
+        <div class="col-lg-12">
 
-            <h4 class="text-primary">ACADEMIC</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut deserunt dolor error iusto minus
-              natus nostrum, officia pariatur ratione rem sapiente soluta? Ad architecto autem cum ipsa sunt vel.</p>
+          <h4 class="text-primary">ACADEMIC</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut deserunt dolor error iusto minus
+            natus nostrum, officia pariatur ratione rem sapiente soluta? Ad architecto autem cum ipsa sunt vel.</p>
 
-          </div>
+        </div>
 
-          <div class="col-lg-12">
+        <div class="col-lg-12">
 
-            <h4 class="text-primary">PROFESSIONAL EXPERIENCE</h4>
-            <br>
-            <h5 class="fw-normal">Job 2</h5>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolores eos est modi recusandae repudiandae
-              sapiente temporibus ullam voluptatibus? Architecto commodi deserunt fuga minima nam necessitatibus
-              recusandae repellat reprehenderit totam.</p>
-            <br>
-            <h5 class="fw-normal">Job 1</h5>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi corporis nostrum repellendus tenetur
-              ut. Commodi corporis delectus eos facere ipsam, maiores nisi odit quibusdam sequi soluta tempora veritatis
-              voluptatem, voluptatum?</p>
+          <h4 class="text-primary">PROFESSIONAL EXPERIENCE</h4>
+          <br>
+          <h5 class="fw-normal">Job 2</h5>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolores eos est modi recusandae repudiandae
+            sapiente temporibus ullam voluptatibus? Architecto commodi deserunt fuga minima nam necessitatibus
+            recusandae repellat reprehenderit totam.</p>
+          <br>
+          <h5 class="fw-normal">Job 1</h5>
+          <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi corporis nostrum repellendus tenetur
+            ut. Commodi corporis delectus eos facere ipsam, maiores nisi odit quibusdam sequi soluta tempora veritatis
+            voluptatem, voluptatum?</p>
 
-          </div>
+        </div>
 
       </div>
-     </div>
+    </div>
 
     <div class="col-lg-8">
 
@@ -155,7 +155,7 @@
 
     </div>
 
-    </div>
+  </div>
 
 </div>
 
