--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Jquery Exercises</title>
+
 </head>
 <body>
-<script src="./js/jquery-3.6.3.js"></script>
+    <h1 id="title" class="codeup">Jquery</h1>
+    <p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, autem beatae consequuntur culpa cumque cupiditate
+        eaque, eius eos ipsum iste, nam odio quis quisquam repudiandae ut! Dolorem minus odio reiciendis.</p>
+
+        <ul id="codeup" >
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
+        </ul>
+    <div id="fistDiv" >JQUERY</div>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="./js/jquery_exercises.js"></script>
 </body>
 </html>
