--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Jquery Exercises</title>
-
+    <link rel="stylesheet" href="css/jquery_exercises.css"/>
 </head>
 <body>
+<div class="column col-shrink">
+    <button class="login">Log In</button>
+</div>
+<div class="column col-shrink">
+    <button class="menu">Menu</button>
+</div>
     <h1 id="title" class="codeup">Jquery</h1>
     <p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, autem beatae consequuntur culpa cumque cupiditate
         eaque, eius eos ipsum iste, nam odio quis quisquam repudiandae ut! Dolorem minus odio reiciendis.</p>
@@ -16,6 +22,20 @@
             <li>C</li>
         </ul>
     <div id="fistDiv" >JQUERY</div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci architecto autem distinctio, dolorum esse
+        explicabo id illum ipsa iste laboriosam non nulla perspiciatis quasi, quos veniam, vitae voluptate
+        voluptatibus.</p>
+    <!--add slide menu-->
+    <div class="mobile-menu">
+        <div class="close-menu">
+            (Close)
+            <ul id="menu" >
+                <li>A</li>
+                <li>B</li>
+                <li>C</li>
+            </ul>
+        </div>
+    </div>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="./js/jquery_exercises.js"></script>
 </body>
