--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AJAX Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a39b7e7bbe.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -34,7 +35,7 @@
                                 <ul>
                                 <li>${data[i].categories.join(', ')}</li>
                                 </ul>
-                                <span class="badge bg-secondary">${data[i].date}</span>
+                                <p class="badge bg-secondary text-end">${data[i].date}</p>
                                 <hr>
                                 </div>`
 
