--- a/ajax-store.html
+++ b/ajax-store.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Online Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/a39b7e7bbe.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-<h1>My Tool Store</h1>
+<h1 class="text-center my-4">My T<span><i class="fa-solid fa-cog fa-spin"></i></span><span><i class="fa-solid fa-cog fa-spin fa-spin-reverse"></i></span>L Store</h1>
 
 <table id="products" class="table">
     <thead>
@@ -16,12 +17,13 @@
         <th>Title</th>
         <th>Quantity</th>
         <th>Price</th>
-        <th class="">Categories</th>
+        <th>Categories</th>
     </tr>
     </thead>
     <tbody id="insertProducts"></tbody>
 </table>
-<button class="btn btn-primary" id="ajax" type="button">Refresh AJAX</button>
+<button class="btn btn-primary" id="ajax" type="button">Refresh <i class="fa-solid fa-cog fa-spin"></i></button>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
@@ -50,6 +52,7 @@
                 }
                 $('#insertProducts').html(content);
             }
+
             $.ajax('./data/inventory.json').done(function (data) {
                 myStore(data);
             })
