--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -6,12 +6,18 @@
     <title>AJAX Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a39b7e7bbe.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.cdnfonts.com/css/amagro" rel="stylesheet">
+    <style>
+        .posts {
+            font-family: 'Amagro', sans-serif;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
 <div class="card bg-light">
-
-<div class="card-body" id="posts"></div>
+    <h1 class="text-center posts mt-3">The AJAX Blogs</h1>
+<div class="card-body posts" id="posts"></div>
 
 </div>
 
@@ -30,7 +36,7 @@
                 console.log(data[1].title)
                 for (let i = 0 ; i < data.length ; i += 1){
                     contents += `<div>
-                                <h3 class="text-center text-decoration-underline my-3">${data[i].title}</h3>
+                                <h3 class="text-decoration-underline my-3">${data[i].title}</h3>
                                 <p>${data[i].content}</p>
                                 <ul>
                                 <li>${data[i].categories.join(', ')}</li>
