--- a/mapbox.html
+++ b/mapbox.html
@@ -56,6 +56,8 @@
 
 <!-- Key -->
 <script src="js/keys.js"></script>
+<!-- Geocoder -->
+<script src="js/mapbox-geocoder-utils.js"></script>
 <!-- Mapbox JS -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
 
@@ -68,9 +70,25 @@
     zoom: 10,
     center: [-98.4916, 29.4252]
   });
-  let marker = new mapboxgl.Marker()
-          .setLngLat([-98.4916, 29.4260])
-          .addTo(map);
+  // let marker = new mapboxgl.Marker()
+  //         .setLngLat([-98.4916, 29.4260])
+  //         .addTo(map);
+  // let alamoPopup = new mapboxgl.Popup()
+  //         .setHTML("<p>Remember The Alamo!</p>")
+  //
+  // marker.setPopup(alamoPopup)
+
+  // the  geocode method from mapbox-geocoder-utils.js
+  geocode("600 Navarro St #350, San Antonio, TX 78205", keys.mapbox).then(function(result) {
+    console.log(result);
+    map.setCenter(result);
+    map.setZoom(18);
+  });
+
+  // reverseGeocode({lng: -98.4861, lat: 29.4260}, keys.mapbox).then(function(results) {
+  //   // logs the address for The Alamo
+  //   console.log(results);
+  // });
 </script>
 </body>
 </html>
