--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -27,8 +27,8 @@
     </div>
   </header>
   <main class="container">
-    <div class="row full-width">
-      <div class="col align-self-center" id='maps' style='max-width: 1000px; height: 600px;'>
+    <div class="row">
+      <div class="col" id='maps' style='max-width: 1000px; height: 600px;'>
       </div>
     </div>
   </main>
