--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -28,6 +28,9 @@
   </header>
   <main class="container">
     <div class="row">
+      <aside class="column" id="restaurant">
+
+      </aside>
       <div class="col" id='maps' style='max-width: 1000px; height: 600px;'>
       </div>
     </div>
