--- a/weather_map.html
+++ b/weather_map.html
@@ -8,24 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--Mapbox -->
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
-  <!--resets css -->
-  <link href="css/resets.css" rel="stylesheet"/>
   <!-- css -->
-  <style>
-    #map {
-      /* the width and height may be set to any size */
-      width: 100%;
-      height: 300px;
-      flex-grow: 1;
-    }
-    /*.fore-cast {*/
-    /*  display: flex;*/
-    /*  flex-direction: row;*/
-    /*  justify-content: space-between;*/
-    /*  max-width: 100%;*/
-    /*  padding: 0;*/
-    /*}*/
-  </style>
+  <link href="css/weather_map.css" rel="stylesheet"/>
+
 </head>
 <body>
 <div class="page-wrapper">
@@ -58,12 +43,13 @@
     <div class="row full-width">
       <div class="column">
         <div id="map"></div>
+        <!-- map display -->
       </div>
     </div>
   </div>
 </div>
 </body>
-<!-- Key -->
+<!-- Keys -->
 <script src="js/keys.js"></script>
 <!-- Geocoder -->
 <script src="js/mapbox-geocoder-utils.js"></script>
@@ -78,100 +64,7 @@
 </script>
 <!--Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-
 </script>
-<script>
-(function(){
-  "use strict";
-  //Mapbox api
-  mapboxgl.accessToken = keys.mapbox;
-  let map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v9',
-    zoom: 8,
-    center: [-98.4916, 29.4252]
-  });
-  // button function to get search value and update the forecast
-  let marker = new mapboxgl.Marker();
-  $('.button').on('click', function () {
-    let searchResult = $('#search').val();
-    // replace the current city
-    let newCity = `<span class='d-flex align-items-end ms-auto text-white city'>Current City: ${searchResult}</span>`
-    $('.city').replaceWith(newCity);
-    // geocode location from search result
-    geocode(searchResult, keys.mapbox).then(function(result) {
-      // console.log(result);
-      // map.setCenter(result);
-      // map.setZoom(18);
-
-      map.flyTo(
-              {center: result, essential: true}
-      )
-              marker.setLngLat(result)
-              .addTo(map)
-      // getting weather data from search result
-      $.get('https://api.openweathermap.org/data/2.5/forecast', {
-        lat: result[1],
-        lon: result[0],
-        appid: keys.weatherMap,
-        units: 'imperial'
-      }).done(function(data) {
-        // can be used to get forecast conditions at current time in increments of 24 hours
-        //   for (let i = 0; i < data.list.length; i += 8) {
-        //     console.log(data.list[i]);
-        //   }
-        // }).fail(function(jqXhr, status, error) {
-        //   console.log(jqXhr);
-        //   console.log(status);
-        //   console.log(error);
-
-        foreCast(data);
-      });
-    });
-  })
-
-  // weather map api
-  $.get('https://api.openweathermap.org/data/2.5/forecast', {
-    lat: 29.4252,
-    lon: -98.4916,
-    appid: keys.justinKey,
-    units: 'imperial'
-  }).done(function(data) {
-    // can be used to get forecast conditions at current time in increments of 24 hours
-    // for (let i = 0; i < data.list.length; i += 8) {
-    //   console.log(data.list[i]);
-    // }
-  // }).fail(function(jqXhr, status, error) {
-  //   console.log(jqXhr);
-  //   console.log(status);
-  //   console.log(error);
-
-    foreCast(data);
-  });
-
-  // append to html
-  function foreCast(data){
-    let content = '';
-    for (let i = 0 ; i < data.list.length ; i += 8){
-      let newDate = new Date(data.list[i].dt * 1000);
-      content += `<div class='card m-2' style="width: 18rem;">
-                   <div class="card-header text-center">${newDate.toLocaleDateString("en-US")}</div>
-                   <div class="card-body">
-                   <ul class="p-0">
-                   <li class="list-group-item text-center">${data.list[i].main.temp_min}${String.fromCharCode(176)}F / ${data.list[i].main.temp_max}${String.fromCharCode(176)}F</li>
-                   <li class="list-group-item text-center"><img alt="icon" src='http://openweathermap.org/img/w/${data.list[i].weather[0].icon}.png'/></li>
-                   <hr>
-                   <li class="list-group-item">Description: ${data.list[i].weather[0].description}</li>
-                   <li class="list-group-item">Humidity: ${data.list[i].main.humidity}</li>
-                   <li class="list-group-item">Wind: ${data.list[i].wind.speed}</li>
-                   <li class="list-group-item">Pressure: ${data.list[i].main.pressure}</li>
-                   </ul>
-                   </div>
-                   </div>`
-    }
-    $('#weatherContent').html(content);
-  }
-
-})();
-</script>
+<!-- js sheet -->
+<script src="./js/weather_map.js"></script>
 </html>
