--- a/weather_map.html
+++ b/weather_map.html
@@ -16,7 +16,7 @@
 <div class="page-wrapper">
   <header class="container container-fluid">
     <div class="row full-width">
-      <div class="col-12 bg-primary d-flex">
+      <div class="col-12 d-flex header">
           <h1 class='mb-0 text-white'>Weather App</h1>
           <span class='d-flex align-items-end ms-auto text-white city'>Current City: San Antonio</span>
       </div>
@@ -27,11 +27,11 @@
       <div class="column col-12">
         <div class="row full-width">
           <div class="col-12 mb-4">
-            <label for="search" class="search">Place</label>
-            <input type="search" class="searchMe p-1" id="search"/>
-            <button type="button" class="button btn btn-primary">Find</button>
+            <label for="search" class="search">Place: </label>
+            <input type="search" class="search p-1" id="search"/>
+            <button type="button" class="button btn">Find</button>
           </div>
-          <div class="col-12 d-flex justify-content-evenly fore-cast" id="weatherContent">
+          <div class="col-12 d-flex fore-cast" id="weatherContent">
             <!--forecast display-->
           </div>
         </div>
