--- a/weather_map.html
+++ b/weather_map.html
@@ -37,7 +37,7 @@
   <div class="container container-fluid">
     <div class="row full-width">
       <div class="column">
-        <div id="map"></div>
+        <div id="map" class="align-center"></div>
         <!-- map display -->
       </div>
     </div>
