--- a/weather_map.html
+++ b/weather_map.html
@@ -18,7 +18,7 @@
     <div class="row full-width">
       <div class="col-12 d-flex header">
           <h1 class='mb-0 text-white'>Weather App</h1>
-          <span class='d-flex align-items-end ms-auto text-white city'>Current City: San Antonio</span>
+          <span class='d-flex align-items-end ms-auto text-white city'>Current Location: San Antonio</span>
       </div>
     </div>
   </header>
